CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT("love-nuklear"
  VERSION 0.1
  LANGUAGES C)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
FIND_PACKAGE(Lua REQUIRED)

SET(LIB_NAME "nuklear-love")

find_path(LOVE_NK_SRC_DIR nuklear_love.h
  HINTS "${CMAKE_CURRENT_SOURCE_DIR}/src")

ADD_LIBRARY(${LIB_NAME} INTERFACE)

TARGET_INCLUDE_DIRECTORIES(${LIB_NAME}
  INTERFACE
  "${LUA_INCLUDE_DIR}"
  "${LOVE_NK_SRC_DIR}"
  )
TARGET_COMPILE_OPTIONS(${LIB_NAME}
  INTERFACE
  "-fvisibility=hidden"
  "-Wno-type-limits"
  "-Wno-sign-compare"
  )
TARGET_LINK_LIBRARIES(${LIB_NAME}
  INTERFACE
  ${LUA_LIBRARIES}
  )

add_library(nuklear::love ALIAS ${LIB_NAME})
